--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babylonjs/core": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
     "html-webpack-plugin": "^4.5.1",
@@ -22,7 +23,6 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "babylonjs": "^4.2.0",
     "loadash": "^1.0.0"
   }
 }
