--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babylonjs/core": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
